src/test/deca/syntax/valid/created/sans_objet/comment_monoligne.deca
// Description:
//    Programme minimaliste utilisant un commentaire monoligne.
//
// Resultats:
//    connaitre les commentaires
//
// Historique:
//    cree le 11/01/2024



{
    //test
    //!
    //[]
}